fix: updating spacing

--- a/css/layout/htmlMain.css
+++ b/css/layout/htmlMain.css
@@ -44,6 +44,12 @@
             border-right: 2px solid #AB594B;
             padding-right: 30px;
     }
+
+    .margin-d-e-5{
+        margin-left: 5px;
+        margin-right: 5px;
+        max-width: 200px;
+      }
 }
 
 @media (max-width: 631px) {
